Raise OSDUBadRequestException